--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "main": "./dist/js/tool.umd.cjs",
   "scripts": {
-    "dev": "NODE_ENV=development vite build --watch",
+    "dev": "NODE_ENV=development vite build --watch --mode development",
     "build": "vite build",
     "package": "npm run format && npm run lint && npm run build",
     "check-format": "prettier --list-different 'resources/**/*.{css,js,vue,ts}'",
